More virtual thread tinkering